@@ -1,0 +1,10 @@
+Title: Fixed sorting of version in werk list (1.2.8p10 and 1.2.8p11 were not listed on top)
+Level: 1
+Component: multisite
+Class: fix
+Compatible: compat
+State: unknown
+Version: 1.4.0i1
+Date: 1474355728
+
+
